--- a/res/layout/fragment4.xml
+++ b/res/layout/fragment4.xml
@@ -4,11 +4,14 @@
     android:layout_height="match_parent" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/loginTitle"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:background="@color/themeColor"
+        android:gravity="center"
         android:padding="10dp"
-        android:text="这是4界面"
+        android:text="@string/title_fragment4"
+        android:textColor="@color/themeBackground"
         android:textSize="20sp" />
 
 </RelativeLayout>
