--- a/res/layout/fragment1.xml
+++ b/res/layout/fragment1.xml
@@ -3,12 +3,23 @@
     android:layout_width="match_parent"  
     android:layout_height="match_parent" >  
   
-        <TextView  
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"  
-            android:layout_gravity="center"  
-            android:padding="10dp"  
-            android:text="这是1界面"  
-            android:textSize="20sp" />  
+    <TextView
+        android:id="@+id/loginTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/themeColor"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/title_fragment1"
+        android:textColor="@color/themeBackground"
+        android:textSize="20sp" />
+    
+    <ListView 
+        android:id="@android:id/list"
+        android:layout_below="@id/loginTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        
+    </ListView>
 
 </RelativeLayout>  
