--- a/res/layout/fragment2.xml
+++ b/res/layout/fragment2.xml
@@ -3,19 +3,15 @@
     android:layout_width="match_parent"  
     android:layout_height="match_parent" >  
   
-    <LinearLayout  
-        android:layout_width="wrap_content"  
-        android:layout_height="wrap_content"  
-        android:layout_centerInParent="true"  
-        android:orientation="vertical" >  
-  
-        <TextView  
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"  
-            android:layout_gravity="center"  
-            android:padding="10dp"  
-            android:text="这是2界面"  
-            android:textSize="20sp" />  
-    </LinearLayout>  
+    <TextView
+        android:id="@+id/loginTitle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/themeColor"
+        android:gravity="center"
+        android:padding="10dp"
+        android:text="@string/title_fragment2"
+        android:textColor="@color/themeBackground"
+        android:textSize="20sp" />
   
 </RelativeLayout>  
