--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -29,7 +29,8 @@
             android:layout_weight="1"
             android:drawableTop="@drawable/radio_icon1"
             android:gravity="center"
-            android:text="@string/buttomButtonText1" />
+            android:text="@string/buttomButtonText1"
+             />
 
         <TextView
             android:id="@+id/bottomTabTextview2"
