compete the main-1 I want to park.

--- a/res/layout/login.xml
+++ b/res/layout/login.xml
@@ -50,6 +50,7 @@
             android:padding="15dp"
             android:singleLine="true" />
 
+        <!-- 登陆按钮 -->
         <Button
             android:id="@+id/loginButton"
             android:layout_width="match_parent"
